--- a/vercel.json
+++ b/vercel.json
@@ -1,73 +1,1 @@
-{
-    "version": 2,
-    "framework": null,
-    "functions": {
-        "api/index.php": {
-            "runtime": "vercel-php@0.7.1"
-        }
-    },
-    "routes": [
-{
-      "src": "/build/(.*)\\.js",
-      "dest": "/public/build/$1.js",
-      "headers": { "Content-Type": "application/javascript; charset=utf-8" }
-    },
-    {
-      "src": "/build/(.*)\\.css",
-      "dest": "/public/build/$1.css",
-      "headers": { "Content-Type": "text/css; charset=utf-8" }
-    },
-    {
-      "src": "/plugins/(.*)\\.js",
-      "dest": "/public/plugins/$1.js",
-      "headers": { "Content-Type": "application/javascript; charset=utf-8" }
-    },
-    {
-      "src": "/plugins/(.*)\\.css",
-      "dest": "/public/plugins/$1.css",
-      "headers": { "Content-Type": "text/css; charset=utf-8" }
-    },
-    {
-      "src": "/resources/(.*)",
-      "dest": "/public/resources/$1"
-    },
-    {
-      "src": "/images/ratings/(.*)",
-      "dest": "/public/images/ratings/$1"
-    },
-    {
-      "src": "/images/(.*)",
-      "dest": "/public/images/$1"
-    },
-    {
-      "src": "/theme/(.*)",
-      "dest": "/public/theme/$1"
-    },
-    {
-      "src": "/favicon/(.*)",
-      "dest": "/public/favicon/$1"
-    },
-    {
-      "src": "/logo/(.*)",
-      "dest": "/public/logo/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.php"
-    }
-    ],
-    "env": {
-        "APP_ENV": "production",
-        "APP_DEBUG": "true",
-        "APP_CONFIG_CACHE": "/tmp/config.php",
-        "APP_EVENTS_CACHE": "/tmp/events.php",
-        "APP_PACKAGES_CACHE": "/tmp/packages.php",
-        "APP_ROUTES_CACHE": "/tmp/routes.php",
-        "APP_SERVICES_CACHE": "/tmp/services.php",
-        "VIEW_COMPILED_PATH": "/tmp",
-
-        "CACHE_DRIVER": "array",
-        "LOG_CHANNEL": "stderr",
-        "SESSION_DRIVER": "cookie"
-    }
-}
+{ "version": 2, "framework": null, "functions": { "api/index.php": { "runtime": "vercel-php@0.7.1" } }, "routes": [ { "src": "/build/(.*)", "dest": "/public/build/" }, { "src": "/resources/(.*)", "dest": "/public/resources/" }, { "src": "/images/ratings/(.*)", "dest": "/public/images/ratings/" }, { "src": "/images/(.*)", "dest": "/public/images/" }, { "src": "/theme/(.*)", "dest": "/public/theme/" }, { "src": "/favicon/(.*)", "dest": "/public/favicon/" }, { "src": "/plugins/(.*)", "dest": "/public/plugins/" }, { "src": "/logo/(.*)", "dest": "/public/logo/" }, { "src": "/(.*)", "dest": "/api/index.php" } ], "env": { "APP_ENV": "production", "APP_DEBUG": "true", "APP_CONFIG_CACHE": "/tmp/config.php", "APP_EVENTS_CACHE": "/tmp/events.php", "APP_PACKAGES_CACHE": "/tmp/packages.php", "APP_ROUTES_CACHE": "/tmp/routes.php", "APP_SERVICES_CACHE": "/tmp/services.php", "VIEW_COMPILED_PATH": "/tmp", "CACHE_DRIVER": "array", "LOG_CHANNEL": "stderr", "SESSION_DRIVER": "cookie" } }
